--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,16 +9,18 @@ services:
       - "8081:80"
     volumes:
       - ./app/:/app
-    command:
-      - "uvicorn main:app --host=0.0.0.0 --port=80 --reload"
+    environment:
+      - GUNICORN_CMD_ARGS="--reload"
+    # command:
+    #   - "uvicorn app.main:app --host=0.0.0.0 --port=80 --reload"
   mongo:
     image: mongo
     environment:
       - MONGO_INITDB_DATABASE:"quiz"
       - MONGO_INITDB_ROOT_USERNAME:"root"
-      - MONGO_INITDB_ROOT_PASSWORD:"root?"
+      - MONGO_INITDB_ROOT_PASSWORD:"root"
     volumes:
-      - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js.ro
+      - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
       - mongo-volume:/data/db
     # ports:
     #   - "27017-27019:27017-27019"
